recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: not found: value legnth
		gauche(60);avance(legnth/3)
                                  ^